# unit-system-cppDesktop

./: .clang-format  .gitignore  Doxyfile  README.md  _r_e_a_d_m_e_8md.html  amount_8cpp.html  amount_8hpp.html  amount_8hpp_source.html  annotated.html  base_8cpp.html  base_8hpp.html  base_8hpp_source.html  classes.html  classsakurajin_1_1unit__system_1_1base_1_1amount-members.html  classsakurajin_1_1unit__system_1_1base_1_1amount.html  classsakurajin_1_1unit__system_1_1base_1_1amount__inherit__graph.map  classsakurajin_1_1unit__system_1_1base_1_1amount__inherit__graph.md5  classsakurajin_1_1unit__system_1_1base_1_1electric__current-members.html  classsakurajin_1_1unit__system_1_1base_1_1electric__current.html  classsakurajin_1_1unit__system_1_1base_1_1electric__current__inherit__graph.map  classsakurajin_1_1unit__system_1_1base_1_1electric__current__inherit__graph.md5  classsakurajin_1_1unit__system_1_1base_1_1length-members.html  classsakurajin_1_1unit__system_1_1base_1_1length.html  classsakurajin_1_1unit__system_1_1base_1_1length__inherit__graph.map  classsakurajin_1_1unit__system_1_1base_1_1length__inherit__graph.md5  classsakurajin_1_1unit__system_1_1base_1_1luminous__intensity-members.html  classsakurajin_1_1unit__system_1_1base_1_1luminous__intensity.html  classsakurajin_1_1unit__system_1_1base_1_1luminous__intensity__inherit__graph.map  classsakurajin_1_1unit__system_1_1base_1_1luminous__intensity__inherit__graph.md5  classsakurajin_1_1unit__system_1_1base_1_1mass-members.html  classsakurajin_1_1unit__system_1_1base_1_1mass.html  classsakurajin_1_1unit__system_1_1base_1_1mass__inherit__graph.map  classsakurajin_1_1unit__system_1_1base_1_1mass__inherit__graph.md5  classsakurajin_1_1unit__system_1_1base_1_1temperature-members.html  classsakurajin_1_1unit__system_1_1base_1_1temperature.html  classsakurajin_1_1unit__system_1_1base_1_1temperature__inherit__graph.map  classsakurajin_1_1unit__system_1_1base_1_1temperature__inherit__graph.md5  classsakurajin_1_1unit__system_1_1base_1_1time__si-members.html  classsakurajin_1_1unit__system_1_1base_1_1time__si.html  classsakurajin_1_1unit__system_1_1base_1_1time__si__inherit__graph.map  (+87 more)
.github/: FUNDING.yml
.github/workflows/: ci.yaml  main.yaml  meson_release.yaml  rc.yaml  release.yaml  stable.yaml
Arduino-extras/examples/advanced_time/: advanced_time.ino
Arduino-extras/examples/simple_time/: simple_time.ino
Arduino-extras/src/: unit-system.hpp
base/: meson.build
base/include/: amount.hpp  base.hpp  electric_current.hpp  length.hpp  luminous_intensity.hpp  mass.hpp  prefix.hpp  temperature.hpp  time.hpp  unit_t.hpp
base/src/: amount.cpp  base.cpp  electric_current.cpp  length.cpp  luminous_intensity.cpp  mass.cpp  temperature.cpp  time.cpp  unit_t.cpp
base/tests/: base_units_test.cpp  meson.build  test_helper.cpp  test_helper.hpp  unit_t_test.cpp
common/: meson.build
common/include/: acceleration.hpp  area.hpp  common.hpp  energy.hpp  force.hpp  momentum.hpp  power.hpp  speed.hpp
common/src/: acceleration.cpp  area.cpp  common.cpp  energy.cpp  force.cpp  momentum.cpp  power.cpp  speed.cpp
common/tests/: acceleration_test.cpp  common_test.cpp  force_test.cpp  meson.build  momentum_test.cpp  speed_test.cpp
generic/: meson.build
generic/include/: unit_t.hpp
generic/tests/: meson.build  unit_t_test.cpp
include/: unit_system.hpp  unit_system_std_implements.hpp
include/unit_system/: acceleration.hpp  amount.hpp  area.hpp  combinations.hpp  constants.hpp  electric_current.hpp  energy.hpp  force.hpp  length.hpp  luminous_intensity.hpp  mass.hpp  momentum.hpp  power.hpp  speed.hpp  std_implements.hpp  temperature.hpp  time_si.hpp  unit_t.hpp  units.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+37 more)
src/: acceleration.cpp  acceleration.hpp  amount.cpp  amount.hpp  area.cpp  base.hpp  combinations.cpp  common.hpp  electric_current.cpp  electric_current.hpp  energy.cpp  energy.hpp  force.cpp  force.hpp  length.cpp  length.hpp  luminous_intensity.cpp  luminous_intensity.hpp  mass.cpp  mass.hpp  momentum.cpp  momentum.hpp  power.cpp  prefix.hpp  speed.cpp  speed.hpp  temperature.cpp  temperature.hpp  time.hpp  time_si.cpp  unit_t.hpp
src/sources/: acceleration.cpp  amount.cpp  electric_current.cpp  energy.cpp  force.cpp  length.cpp  luminous_intensity.cpp  mass.cpp  momentum.cpp  speed.cpp  temperature.cpp  time.cpp
templates/: combinations.json  constants.json  constants.template  header.template  header_combine.template  source.template  source_combine.template  unit_type.template  units.json  units.template
tests/: base_units_test.cpp  common_test.cpp  meson.build  test_functions.hpp  unit_t_test.cpp  unit_test.cpp
windows-extras/base/: unit-system-base-0.def  unit-system-base.def
windows-extras/common/: unit-system-common-0.def  unit-system-common.def
